# challenge_project

./: CMakeLists.txt  LICENSE  README.md  package.xml  setup.py
config/: line_detection.yaml  turtlebot3_burger.yaml
launch/: gazebo.launch  rviz.launch
launch/challenge1/: challenge1_task1.launch  challenge1_task2.launch  challenge1_task3.launch  test.launch
launch/challenge2/: challenge2_task1.launch  challenge2_task2.launch  challenge2_task3.launch  lds_distance_servoing.launch  lds_moving_obstacle_avoidance.launch  lds_stop.launch
launch/challenge3/: challenge3_task1.launch  challenge3_task2.launch  challenge3_task3.launch  gazebo_cha3.launch  movement_corridor.launch
msg/: FBLR_distance.msg  cardinal_direction.msg
scripts/: lds_distance_publisher.py
scripts/challenge1/: line_detection.py  line_following.py
scripts/challenge2/: distance_servoing.py  emergency_stop.py  lds_FBLR_publisher.py  lds_distance_servoing.py  lds_emergency_stop.py  lds_moving_obstacle_avoidance.py  moving_obstacle_avoidance.py
scripts/challenge3/: line-follow_obst-avoidance.py  movement_corridor.py  movement_corridor_part2.py  navigation.py
src/challenge_project/: CamColorDetection.py  color_detection.py
urdf/robot_with_sensors/: robot_with_sensors.xacro
urdf/turtlebot3_burger/: param.yaml  turtlebot3_burger.gazebo.xacro  turtlebot3_burger.urdf.xacro
