<?xml version="1.0"?>

<package format="2">

  <name>challenge_project</name>

  <version>1.0</version>

  <description>
    Package de la partie 3 - projet - de l'UE  "ROS and experimental robotics"
  </description>

  <maintainer email="pierre.joyet@etu.sorbonne-universite.fr">Pierre JOYET</maintainer>
  <maintainer email="marine.cornet@etu.sorbonne-universite.fr">Marine CORNET</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>urdf</build_depend>
  <build_export_depend>urdf</build_export_depend>
  <exec_depend>urdf</exec_depend>

  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>

  <build_depend>std_msgs</build_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>std_msgs</exec_depend>

</package>